# A-Maze-Ing

./: .config.txt.swp  A-Maze-Ing.context.md  Makefile  README.md  a_maze_ing.py  a_maze_ing_checklist.txt  baixados.xpm  chage maze .txt  config.txt  draw.py  game.py  gamestat.py  graphic.py  hooks.py  main.py  map.py  maze.txt  mino.xpm  minotauro.xpm  pyproject.toml  requirements.txt  square.py  state.py  teseu.xpm  teseu_victory.xpm  teste.txt  validate_config.py
mlx-2.2.dist-info/: METADATA  RECORD  top_level.txt
package/: README.md  __init__.py  map.py  maze_gen.py  mazegen.py
