[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "maze_gen.py"
version = "1.0m"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx==2.2.0"
]
authors = [
	{name = "Brendon bachie"},
	{name = "Daniel vieira"}
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".mypy_cache", ".pytest_cache", "__pycache__"]