[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen.py"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

authors = [
	{name = "Brendon Bachie"},
	{name = "Daniel Vieira"}
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
exclude = [".mypy_cache", ".pytest_cache", "__pycache__"]